--- a/views/modificar.ejs
+++ b/views/modificar.ejs
@@ -35,6 +35,7 @@
 				 <input class="form-input" type="text" placeholder="Descripcion del producto" name="descripcion" value="<% producto.descripcion %> ">
 			 </li>
 			 <li class="bordear">
+				<p>FECHA DE HOY</p>
 				<input class="form-input" type="date" placeholder="fecha de creacion" name="fecha" value="<% producto.fecha %> ">
 			</li>
             <li class="bordear">
