nombre en productos, hipervinculos novedades

--- a/views/allproducts.ejs
+++ b/views/allproducts.ejs
@@ -32,8 +32,8 @@
 						</figure>
 						<article class="product-box_data">
 							<h2><%= element.nombre %></h2>
-							
 							<p><%= element.descripcion %></p>
+							<h1> Por: <%= element.usuarios.nombre + " " + element.usuarios.apellido %> </h1>
 							
 							
 						</article>
