--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,7 @@
 				</a>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
+				<a href="/product/7">
 				<section class="product-box">
 					<!--<a href="/product">-->
 						<figure class="product-box_image">
@@ -54,6 +55,7 @@
 						</article>
 					<!--</a>-->
 				</section>
+			</a>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
@@ -70,6 +72,7 @@
 				</section>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
+				<a href="/product/4">
 				<section class="product-box">
 					<!--<a href="/product">-->
 						<figure class="product-box_image">
@@ -82,6 +85,7 @@
 						</article>
 					<!--</a>-->
 				</section>
+			</a>
 			</div>
 		</div>
 	</div>
@@ -105,6 +109,7 @@
 						<article class="product-box_data">
 							<h2><%= productos[i].nombre %></h2>
 							<p><%= productos[i].descripcion %></p>
+
 					
 						</article>
 					</a>
