casi todo terminado

--- a/views/modificar.ejs
+++ b/views/modificar.ejs
@@ -20,26 +20,26 @@
 			
 	<div class="form-registracion">
 		<h2 class="col-12"> 
-		<form class="tablaRegistracion" action="/add" method="POST" enctype="multipart/form-data">
+		<form class="tablaRegistracion" action="/modificar" method="POST" enctype="multipart/form-data">
 			<ul class= "registracionItems">
 			  <li class="bordearDiferente"> 
-				<input class="form-input" type="text" id="nombre" placeholder="Nombre del producto"name="nombre" value="<% producto.nombre %> ">
+				<input class="form-input" type="text" id="nombre" placeholder="Nombre del producto"name="nombre" value="<%= producto.nombre %>">
 			 </li>
 			
 				 
 			 <li class="bordear">
-					<input class="form-input" type="file" name="productModif" value="<% producto.image %> "/>
+					<input class="form-input" type="file" name="productModif" value="<% producto.image%>"/>
 			 </li>
 			 
 			 <li class="bordear">
-				 <input class="form-input" type="text" placeholder="Descripcion del producto" name="descripcion" value="<% producto.descripcion %> ">
+				 <input class="form-input" type="text" placeholder="Descripcion del producto" name="descripcion" value="<%= producto.descripcion%>">
 			 </li>
 			 <li class="bordear">
 				<p>FECHA DE HOY</p>
-				<input class="form-input" type="date" placeholder="fecha de creacion" name="fecha" value="<% producto.fecha %> ">
+				<input class="form-input" type="date" placeholder="fecha de creacion" name="fecha" value="<%= producto.fecha%>">
 			</li>
             <li class="bordear">
-				<input type="hidden" name="id" value="<% producto.id %> ">
+				<input type="hidden" name="id" value="<%= producto.id%>">
 			</li>
 			 <li class="bordear">
 				<input class="actualizar-perfil" type="submit" placeholder="Confirmar">
