--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -36,7 +36,7 @@
 							<article class="product-box_data">
 								<h2><%= productos.nombre %></h2>
 								<p><%= productos.descripcion %></p>
-								<p>Comentarios: 4 </p>
+								<h1>Por: <%= productos.usuarios.nombre + " " + productos.usuarios.apellido %> </h1>
 							</article>
 						</a>
 					</section>
