--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,18 +58,20 @@
 			</a>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
+				<a href="/product/3">
 				<section class="product-box">
 					<!--<a href="/product">-->
 						<figure class="product-box_image">
 							<img src="/images/navidad-oferta.jpeg" alt="">
 						</figure>
 						<article class="product-box_data">
-							<h2>¡cupon de $2000 de navidad!</h2>
-							<p>¡Registrate y te regalamos un cupon navideño de $2000!</p>
+							<h2>¡cupon de $2000 de navidad en Niño Gordo!</h2>
+							<p>¡Registrate y te regalamos $2000 para comer en Niño Gordo!</p>
 						
 						</article>
 					<!--</a>-->
 				</section>
+			</a>
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<a href="/product/4">
